unify naming to lib.typ, add cats package

--- a/typst/cats/1.0.0/typst.toml
+++ b/typst/cats/1.0.0/typst.toml
@@ -1,8 +1,8 @@
 [package]
-name = "base"
+name = "cats"
 version = "1.0.0"
 authors = ["Ptkyr"]
 license = "MIT"
-description = "Formatting"
+description = "Calculus and stats macros"
 
 entrypoint = "./lib.typ"
