--- a/typst/linalg/1.0.0/typst.toml
+++ b/typst/linalg/1.0.0/typst.toml
@@ -5,4 +5,4 @@ authors = ["Ptkyr"]
 license = "MIT"
 description = "Linear algebra templates"
 
-entrypoint = "./linalg.typ"
+entrypoint = "./lib.typ"
